Increase vsal timeout Post is still not working Change cursor on refresh form button remove turnAnnotations param Temporary fix of the footer not showing when there's sidebar

--- a/src/app/components/parts/privacy-footer/privacy-footer.component.css
+++ b/src/app/components/parts/privacy-footer/privacy-footer.component.css
@@ -27,7 +27,7 @@
     justify-content: space-between;
     flex-direction: row;
     width: 100%;
-    max-width: 80em;
+    max-width: 68em;
 }
 
 
